--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
 </head>
 <body>
     <header>
-        <h3>HR labib</h3>
+        <nav>
+            <h3 class="nav-title">HR la<span class="text-primary">b</span>ib</h3>
         <ul>
             <li><a href="">portfolio</a></li>
             <li><a href="">Blog</a></li>
-            <li><button>Hire Me</button></li>
+            <li><button class="btn-primary">Hire Me</button></li>
         </ul>
+        </nav>
     </header>
 
     <main>
