--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>portfolio</title>
 </head>
 <body>
-    <header>
+    <header class="header">
         <nav>
             <h3 class="nav-title">HR la<span class="text-primary">b</span>ib</h3>
         <ul>
@@ -20,6 +20,16 @@
             <li><button class="btn-primary">Hire Me</button></li>
         </ul>
         </nav>
+        <div class="banner">
+            <div class="banner-con">
+                <h3 class="banner-greeting">Hi, I  am</h3>
+                <h1 class="banner-title">Hamidur Rahman Labib</h1>
+                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+               <button class="btn-primary">Download CV</button>
+               <button class="btn-primary">Contac Me</button>
+            </div>
+            <img class="profile-pic" src="./images/labib.png" alt="">
+        </div>
     </header>
 
     <main>
